Author image overlap fix

--- a/ui.frontend/src/main/webpack/components/_double-text-image.scss
+++ b/ui.frontend/src/main/webpack/components/_double-text-image.scss
@@ -1,28 +1,38 @@
-.double-text-image{
-  .first-text-image{
-      .cmp-image__left img {
-          margin-left:-10px;
-          border-radius: 0 40px 0 0!important;
-      }
-      .cmp-image__right img {
-          margin-left: 10px;
-          border-radius: 40px 0 0 0!important;
-      }
+.aem-AuthorLayer-Edit .double-text-image .second-text-image {
+  margin-top: 0 !important;
+}
+
+.double-text-image {
+  .first-text-image {
+    .cmp-image__left img {
+      margin-left: -10px;
+      border-radius: 0 40px 0 0 !important;
+    }
+
+    .cmp-image__right img {
+      margin-left: 10px;
+      border-radius: 40px 0 0 0 !important;
+    }
   }
-  .second-text-image{
-    margin-top:-20px!important;
-      .cmp-image__left img {
-          margin-left:-10px;
-          border-radius: 0 0 40px 0!important;
-      }
-      .cmp-image__right img {
-          margin-left: 10px;
-          border-radius: 0 0 0 40px !important;
-      }
-      .cmp-content__right {
-        order: 2;
-      }
+
+  .second-text-image {
+    margin-top: -20px !important;
+
+    .cmp-image__left img {
+      margin-left: -10px;
+      border-radius: 0 0 40px 0 !important;
+    }
+
+    .cmp-image__right img {
+      margin-left: 10px;
+      border-radius: 0 0 0 40px !important;
+    }
+
+    .cmp-content__right {
+      order: 2;
+    }
   }
+
   .cmp-teaser {
     display: flex;
     justify-content: space-between;
@@ -33,29 +43,36 @@
     .cmp-image__left {
       order: 2;
     }
-    .cmp-image__right{
-      img{
+
+    .cmp-image__right {
+      img {
         max-width: 100%;
       }
     }
-    .cmp-image__left{
-      img{
+
+    .cmp-image__left {
+      img {
         max-width: 100%;
       }
     }
+
     .cmp-content__right {
       padding: 0 80px;
     }
-    .cmp-content__left{
+
+    .cmp-content__left {
       padding: 0 80px;
     }
+
     .cmp-content__right {
       @at-root .cmp-teaser {
         flex-direction: row;
       }
     }
+
     .cmp-teaser__image {
       border-radius: 50%;
+
       .cmp-image {
         img {
           border-radius: 0 0 40px 0;
@@ -70,7 +87,7 @@
       align-items: normal;
 
       .cmp-text-image-headline {
-        font-family: "Univers 65 Bold";
+        font-family: $font-universe-roman-bold;
         font-weight: 900;
         font-size: 23px;
         letter-spacing: -0.4px;
@@ -81,8 +98,8 @@
       }
 
       .cmp-text-image-description {
-        color:#000;
-        font-family: "Univers LT Std";
+        color: #000;
+        font-family: $font-universe-std;
         font-size: 16px;
         letter-spacing: -0.1px;
         line-height: 28px;
